--- a/lab1/index_02.html
+++ b/lab1/index_02.html
@@ -4,9 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="Art gallery">
-
-   <title>Art gallery</title>
+   <title>Document</title>
 </head>
 
 <body>
