--- a/lab1/index.html
+++ b/lab1/index.html
@@ -5,6 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Art gallery">
+   <meta name="author" content="Arseny">
 
    <title>Art gallery</title>
 </head>
