--- a/lab 2/html/main.html
+++ b/lab 2/html/main.html
@@ -4,53 +4,51 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="Art gallery">
+   <meta name="description" content="Noble Art">
    <meta name="author" content="Arseny">
 
    <title>Noble Art</title>
 </head>
 
-
 <header link="blue" vlink="purple" alink="red">
    <div class="logo-section">
-      <a href="/html/home.html" class="logo-icon">N</a>
-      <font face="Georgia" size="4"><b>Noble Art</b></font>
+      <a href="/lab 2/html/home.html" class="logo-icon"
+         style="text-decoration: none; background: #000; color: #fff; padding: 5px 10px; border-radius: 5px;">N</a>
+      <font face="Georgia" size="4"><b> Noble Art Gallery</b></font>
    </div>
 
    <p>
       <font color="blue">
-         <a href="schedule.html">Перейти на сторінку "Графік роботи"</a>
+         <a href="schedule.html">Графік роботи та екскурсій</a>
       </font>
    </p>
 
    <p>
       <font color="green">
-         <a href="location.html">Перейти на сторінку "Розташування"</a>
+         <a href="location.html">Як нас знайти</a>
       </font>
    </p>
 
    <p>
       <font color="purple">
-         <a href="location.html#map">Перейти до карти проїзду</a>
+         <a href="location.html#map">Інтерактивна мапа залів</a>
       </font>
    </p>
 
    <p>
       <font color="red">
-         <a href="#selected_exhibits">Перейти до експонатів </a>
+         <a href="#selected_exhibits">Поточна експозиція</a>
       </font>
    </p>
 
-
    <div class="user-controls">
       <a href="#" class="profile-link">
-         <span>Мій профіль</span>
-         <div class="avatar">JD</div>
+         <span>Особистий кабінет колекціонера</span>
       </a>
    </div>
 </header>
 
-<body style="background-color: rgb(119, 117, 115);">
+<body style="background-color: rgb(119, 117, 115); color: #f1f1f1;">
 
    <div style="margin: 20px;">
 
@@ -62,21 +60,21 @@
 
       <p align="center">
          <font face="Arial" size="4" color="#dddddd">
-            <i>Онлайн-галерея для перегляду та натхнення</i>
+            <i>Простір, де оживають полотна та застигає час</i>
          </font>
       </p>
 
       <p align="left">
          <font face="Tahoma" size="3" color="#f1f1f1">
-            <b>Lorem, ipsum</b> dolor sit amet consectetur adipisicing elit. Sequi ipsam similique quibusdam dignissimos
-            praesentium perspiciatis assumenda <b>&lt;illum&gt;</b> nobis nihil tenetur hic ipsum rerum est,
-            amet perferendis <i>iure</i> veniam expedita eius.
+            <b>Наша місія</b> — відкривати нові імена в сучасному живописі та зберігати велич класичної спадщини. Ми
+            зібрали понад <b>500 унікальних робіт</b> від майстрів з усього світу, щоб ви могли насолоджуватися
+            справжнім мистецтвом, не виходячи з дому. Кожна картина — це окрема історія, що чекає на свого глядача.
          </font>
       </p>
 
       <p align="right">
          <font face="Courier New" size="3" color="#c7eaff">
-            <i>Sequi ipsam similique quibusdam </i>
+            <i>"Мистецтво змиває з душі пил повсякденного життя" — Пабло Пікассо</i>
          </font>
       </p>
 
@@ -87,37 +85,39 @@
    <div style="margin: 0 auto; text-align:center;">
 
       <p>
-         <font face="Arial" size="4" color="#ffffff"><b>Зображення (базовий розмір)</b></font>
+         <font face="Arial" size="4" color="#ffffff"><b>Портретний живопис</b></font>
       </p>
 
-      <a href="https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?auto=format&fit=crop&w=1600&q=80"
+      <a id="picture1"
+         href="https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?auto=format&fit=crop&w=1600&q=80"
          target="_blank">
          <img src="https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?auto=format&fit=crop&w=800&q=80"
-            alt="Art base" width="240" height="160">
+            alt="Портрет" width="240" height="160">
       </a>
 
       <br><br>
 
       <p>
-         <font face="Arial" size="4" color="#ffffff"><b>Зменшено в 2 рази</b></font>
+         <font face="Arial" size="4" color="#ffffff"><b>Етюди та начерки</b></font>
       </p>
 
-      <a href="https://images.unsplash.com/photo-1582555172866-f73bb12a2ab3?auto=format&fit=crop&w=1600&q=80"
+      <a id="picture2"
+         href="https://images.unsplash.com/photo-1582555172866-f73bb12a2ab3?auto=format&fit=crop&w=1600&q=80"
          target="_blank">
          <img src="https://images.unsplash.com/photo-1582555172866-f73bb12a2ab3?auto=format&fit=crop&w=800&q=80"
-            alt="Art smaller" width="120" height="80">
+            alt="Етюд" width="120" height="80">
       </a>
 
       <br><br>
 
       <p>
-         <font face="Arial" size="4" color="#ffffff"><b>Збільшено в 2 рази</b></font>
+         <font face="Arial" size="4" color="#ffffff"><b>Монументальне полотно</b></font>
       </p>
 
-      <a href="https://images.unsplash.com/photo-1549490349-8643362247b5?auto=format&fit=crop&w=1600&q=80"
+      <a id="picture3" href="https://images.unsplash.com/photo-1549490349-8643362247b5?auto=format&fit=crop&w=1600&q=80"
          target="_blank">
          <img src="https://images.unsplash.com/photo-1549490349-8643362247b5?auto=format&fit=crop&w=800&q=80"
-            alt="Art bigger" width="480" height="320">
+            alt="Авангард" width="480" height="320">
       </a>
 
    </div>
@@ -126,67 +126,43 @@
 
    <div style="margin: 20px 0;">
       <p align="left">
-         <font face="Georgia" size="4" color="#ffffff"><b>Списки (UL / OL / DL)</b></font>
+         <font face="Georgia" size="4" color="#ffffff"><b>Гід по галереї (Напрямки)</b></font>
       </p>
 
       <p>
-         <font face="Arial" size="3" color="#ffffff"><b>1) Маркерований список &lt;ul&gt; (type)</b></font>
+         <font face="Arial" size="3" color="#ffffff"><b>1) Жанри мистецтва в нашому фонді</b></font>
       </p>
 
       <ul type="square">
          <li>
-            <font face="Tahoma" size="3" color="#f1f1f1">Square marker</font>
+            <font face="Tahoma" size="3" color="#f1f1f1">Пейзаж (природа та міські краєвиди)</font>
          </li>
          <li>
-            <font face="Tahoma" size="3" color="#f1f1f1"><i>Italic item</i></font>
+            <font face="Tahoma" size="3" color="#f1f1f1"><i>Натюрморт</i> (гармонія предметів)</font>
          </li>
          <li>
-            <font face="Tahoma" size="3" color="#f1f1f1"><b>Bold item</b></font>
-         </li>
-      </ul>
-
-      <ul type="circle">
-         <li>
-            <font face="Tahoma" size="3" color="#f1f1f1">Circle marker</font>
-         </li>
-         <li>
-            <font face="Tahoma" size="3" color="#f1f1f1">Another item</font>
+            <font face="Tahoma" size="3" color="#f1f1f1"><b>Сюрреалізм</b> (світ фантазій та снів)</font>
          </li>
       </ul>
 
       <p>
-         <font face="Arial" size="3" color="#ffffff"><b>2) Нумерований список &lt;ol&gt; (type)</b></font>
+         <font face="Arial" size="3" color="#ffffff"><b>2) Етапи придбання картини</b></font>
       </p>
 
       <ol type="1">
          <li>
-            <font face="Verdana" size="3" color="#f1f1f1">Type 1 (1,2,3)</font>
+            <font face="Verdana" size="3" color="#f1f1f1">Вибір роботи в каталозі</font>
          </li>
          <li>
-            <font face="Verdana" size="3" color="#f1f1f1">Step two</font>
-         </li>
-      </ol>
-
-      <ol type="A">
-         <li>
-            <font face="Verdana" size="3" color="#f1f1f1">Type A (A,B,C)</font>
+            <font face="Verdana" size="3" color="#f1f1f1">Отримання сертифіката автентичності</font>
          </li>
          <li>
-            <font face="Verdana" size="3" color="#f1f1f1">Next</font>
-         </li>
-      </ol>
-
-      <ol type="i">
-         <li>
-            <font face="Verdana" size="3" color="#f1f1f1">Type i (i,ii,iii)</font>
-         </li>
-         <li>
-            <font face="Verdana" size="3" color="#f1f1f1">Next</font>
+            <font face="Verdana" size="3" color="#f1f1f1">Бережна доставка до вашої оселі</font>
          </li>
       </ol>
 
       <p>
-         <font face="Arial" size="3" color="#ffffff"><b>3) Список визначень &lt;dl&gt;</b></font>
+         <font face="Arial" size="3" color="#ffffff"><b>3) Термінологія для відвідувачів</b></font>
       </p>
 
       <dl>
@@ -194,70 +170,75 @@
             <font face="Georgia" size="3" color="#ffd27d"><b>Експонат</b></font>
          </dt>
          <dd>
-            <font face="Tahoma" size="3" color="#f1f1f1">Окремий твір мистецтва, представлений у галереї.</font>
+            <font face="Tahoma" size="3" color="#f1f1f1">Окремий твір мистецтва (картина, скульптура, інсталяція), що
+               виставлений для огляду.</font>
          </dd>
 
          <dt>
-            <font face="Georgia" size="3" color="#ffd27d"><b>Аукціон</b></font>
+            <font face="Georgia" size="3" color="#ffd27d"><b>Вернісаж</b></font>
          </dt>
          <dd>
-            <font face="Tahoma" size="3" color="#f1f1f1">Продаж лота з торгами, де перемагає найвища ставка.</font>
+            <font face="Tahoma" size="3" color="#f1f1f1">Урочисте відкриття художньої виставки, на якому присутні автори
+               та запрошені гості.</font>
          </dd>
 
          <dt>
-            <font face="Georgia" size="3" color="#ffd27d"><b>Лот</b></font>
+            <font face="Georgia" size="3" color="#ffd27d"><b>Багет</b></font>
          </dt>
          <dd>
-            <font face="Tahoma" size="3" color="#f1f1f1">Предмет продажу (картина/скульптура тощо).</font>
+            <font face="Tahoma" size="3" color="#f1f1f1">Декоративна планка або рама, яка обрамляє картину, підкреслюючи
+               її стиль.</font>
          </dd>
       </dl>
    </div>
 
 
    <h2 id="selected_exhibits" style="text-align:center; margin-top:40px;">
-      Вибрані експонати
+      Головні лоти сезону
    </h2>
 
    <table border="1" cellspacing="0" cellpadding="10" align="center" width="90%">
       <thead style="background-color:#3b3b3b; color:white;">
          <tr>
-            <th>Експонат 1</th>
-            <th>Експонат 2</th>
-            <th>Експонат 3</th>
-            <th>Експонат 4</th>
+            <th>"Золота осінь"</th>
+            <th>"Ранкова роса"</th>
+            <th>"Мегаполіс"</th>
+            <th>"Мрії про море"</th>
          </tr>
       </thead>
 
       <tbody>
 
          <tr align="center">
-            <td><img src="https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?q=80&w=200" width="150"></td>
-            <td><img src="https://images.unsplash.com/photo-1582555172866-f73bb12a2ab3?q=80&w=200" width="150"></td>
-            <td><img src="https://images.unsplash.com/photo-1549490349-8643362247b5?q=80&w=200" width="150"></td>
-            <td><img src="https://images.unsplash.com/photo-1606819717115-9159c900370b?q=80&w=200" width="150"></td>
+            <td><img src="https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?q=80&w=200" width="150"
+                  alt="Лот 1"></td>
+            <td><img src="https://images.unsplash.com/photo-1582555172866-f73bb12a2ab3?q=80&w=200" width="150"
+                  alt="Лот 2"></td>
+            <td><img src="https://images.unsplash.com/photo-1549490349-8643362247b5?q=80&w=200" width="150" alt="Лот 3">
+            </td>
+            <td><img src="https://images.unsplash.com/photo-1606819717115-9159c900370b?q=80&w=200" width="150"
+                  alt="Лот 4"></td>
          </tr>
 
 
          <tr align="center">
-            <td><a href="https://unsplash.com" target="_blank">Переглянути</a></td>
-            <td><a href="https://unsplash.com" target="_blank">Переглянути</a></td>
-            <td><a href="https://unsplash.com" target="_blank">Переглянути</a></td>
-            <td><a href="https://unsplash.com" target="_blank">Переглянути</a></td>
+            <td><a href="#picture1" style="color: #ffd27d;">Детальніше</a></td>
+            <td><a href="#picture2" style="color: #ffd27d;">Детальніше</a></td>
+            <td><a href="#picture3" style="color: #ffd27d;">Детальніше</a></td>
+            <td><a href="#" style="color: #ffd27d;">Детальніше</a></td>
          </tr>
 
          <tr align="center">
-            <td>Класичне мистецтво</td>
-            <td>Сучасна абстракція</td>
-            <td>Модерна виставка</td>
-            <td>Авангард</td>
+            <td>Олія на полотні</td>
+            <td>Акварельна техніка</td>
+            <td>Цифровий арт</td>
+            <td>Акриловий живопис</td>
          </tr>
       </tbody>
    </table>
 
-   </div>
-
-   <footer>
-      &copy; 2026 Noble Art Gallery Project
+   <footer style="text-align: center; padding: 30px; margin-top: 50px; border-top: 1px solid #555;">
+      &copy; 2026 Noble Art Gallery — Ми робимо мистецтво ближчим.
    </footer>
 </body>
 
