--- a/lab 3/html/location.html
+++ b/lab 3/html/location.html
@@ -8,13 +8,13 @@
    <meta name="author" content="Arseny">
 
    <title>Noble Art</title>
-   <link rel="stylesheet" href="/css/location.css">
+   <link rel="stylesheet" href="/lab 3/css/location.css">
 </head>
 
 <body>
 
    <div class="back-nav">
-      <a href="/html/main.html" class="back-btn">
+      <a href="/lab 3/html/main.html" class="back-btn">
          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M19 12H5M12 19l-7-7 7-7" />
          </svg>
