--- a/lab 4/html/main.html
+++ b/lab 4/html/main.html
@@ -8,19 +8,19 @@
    <meta name="author" content="Arseny">
 
    <title>Noble Art</title>
-   <link rel="stylesheet" href="/css/main.css">
+   <link rel="stylesheet" href="/lab 4/css/main.css">
 </head>
 
 
 <header>
    <div class="logo-section">
-      <a href="/html/home.html" class="logo-icon">N</a>
+      <a href="/lab 4/html/home.html" class="logo-icon">N</a>
       <font face="Georgia" size="4"><b>Noble Art</b></font>
    </div>
 
    <nav class="main-nav">
-      <a href="/html/schedule.html">Графік роботи</a>
-      <a href="/html/location.html">Розташування</a>
+      <a href="/lab 4/html/schedule.html">Графік роботи</a>
+      <a href="/lab 4/html/location.html">Розташування</a>
    </nav>
 
    <div class="user-controls">
