--- a/lab 5/html/home.html
+++ b/lab 5/html/home.html
@@ -8,13 +8,13 @@
    <meta name="author" content="Arseny">
 
    <title>Noble Art</title>
-   <link rel="stylesheet" href="/css/home.css">
+   <link rel="stylesheet" href="/lab 5/css/home.css">
 </head>
 
 <body>
    <div class="hero">
       <h1>Noble Art</h1>
-      <a href="/html/main.html" class="get-started">Відкрити галерею</a>
+      <a href="/lab 5/html/main.html" class="get-started">Відкрити галерею</a>
    </div>
 </body>
 
