--- a/lab 5/html/main.html
+++ b/lab 5/html/main.html
@@ -4,23 +4,23 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta name="description" content="Art gallery">
+   <meta name="description" content="Noble Art — Галерея сучасного мистецтва">
    <meta name="author" content="Arseny">
 
-   <title>Noble Art</title>
-   <link rel="stylesheet" href="/css/main.css">
+   <title>Noble Art | Вибрані твори</title>
+   <link rel="stylesheet" href="/lab 5/css/main.css">
 </head>
 
 
 <header>
    <div class="logo-section">
-      <a href="/html/home.html" class="logo-icon">N</a>
+      <a href="/lab 5/html/home.html" class="logo-icon">N</a>
       <font face="Georgia" size="4"><b>Noble Art</b></font>
    </div>
 
    <nav class="main-nav">
-      <a href="/html/schedule.html">Графік роботи</a>
-      <a href="/html/location.html">Розташування</a>
+      <a href="/lab 5/html/schedule.html">Графік роботи</a>
+      <a href="/lab 5/html/location.html">Розташування</a>
    </nav>
 
    <div class="user-controls">
@@ -39,16 +39,15 @@
 
 
    <div class="float-demo">
-      <div class="float-box">
-         FLOAT
+      <div class="float-box" style="background-color: #ffd27d; color: #000; padding: 10px; font-weight: bold;">
+         <p>НОВИНКА</p>
       </div>
 
       <p>
          <font size="3">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic debitis placeat maiores praesentium.
-            Deleniti itaque accusantium architecto esse aut eius
-            iste cupiditate consectetur, odit ullam natus
-            laudantium hic distinctio quidem?
+            <b>Погляд крізь епохи:</b> Цього місяця ми представляємо унікальну серію полотен, що поєднують у собі
+            класичну техніку олійного живопису та сміливі експерименти сучасного авангарду. Кожна робота в цій колекції
+            була відібрана нашими кураторами, щоб надихнути вас на власні роздуми про вічне.
          </font>
       </p>
    </div>
@@ -58,57 +57,59 @@
 
       <div class="pin-item">
          <a href="https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5" target="_blank">
-            <img src="https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?q=80&w=500" alt="Art">
+            <img src="https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?q=80&w=500" alt="Золотий Ренесанс">
          </a>
          <div class="pin-content">
             <b>Золотий Ренесанс</b>
             <p>
-               <font size="2">Високе полотно</font>
+               <font size="2">Епоха класики, олія</font>
             </p>
          </div>
       </div>
 
       <div class="pin-item">
          <a href="https://images.unsplash.com/photo-1582555172866-f73bb12a2ab3" target="_blank">
-            <img src="https://images.unsplash.com/photo-1582555172866-f73bb12a2ab3?q=80&w=500" alt="Art">
+            <img src="https://images.unsplash.com/photo-1582555172866-f73bb12a2ab3?q=80&w=500" alt="Абстракція">
          </a>
          <div class="pin-content">
-            <b>Абстракція</b>
+            <b>Геометрична абстракція</b>
+            <p>
+               <font size="2">Гра форм та кольору</font>
+            </p>
          </div>
       </div>
 
       <div class="pin-item">
          <a href="https://images.unsplash.com/photo-1549490349-8643362247b5" target="_blank">
-            <img src="https://images.unsplash.com/photo-1549490349-8643362247b5?q=80&w=500" alt="Fashion Art">
+            <img src="https://images.unsplash.com/photo-1549490349-8643362247b5?q=80&w=500" alt="Модернізм">
          </a>
          <div class="pin-content">
-            <b>Сучасна виставка</b>
+            <b>Симфонія модерну</b>
+            <p>
+               <font size="2">Сучасна виставка</font>
+            </p>
          </div>
       </div>
 
       <div class="pin-item">
-         <a href="https://images.unsplash.com/photo-1606819717115-9159c900370b?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-            target="_blank">
-            <img
-               src="https://images.unsplash.com/photo-1606819717115-9159c900370b?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-               alt="Fashion Art">
+         <a href="https://images.unsplash.com/photo-1606819717115-9159c900370b?q=80&w=1170" target="_blank">
+            <img src="https://images.unsplash.com/photo-1606819717115-9159c900370b?q=80&w=1170" alt="Авангард">
          </a>
          <div class="pin-content">
-            <b>Золотий Ренесанс</b>
+            <b>Енергія авангарду</b>
             <p>
                <font size="2">
-                  <span class="highlight-text">Високе полотно</span>
+                  <span class="highlight-text">Експериментальне полотно</span>
                </font>
             </p>
          </div>
-
       </div>
 
    </div>
 
 
    <footer>
-      &copy; 2026 Noble Art Gallery Project
+      &copy; 2026 Noble Art Gallery Project — Світ, де мистецтво стає реальністю.
    </footer>
 </body>
 
