--- a/lab 6/html/main.html
+++ b/lab 6/html/main.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Noble Art — Галерея сучасного мистецтва">
    <meta name="author" content="Arseny">
-   <title>Noble Art | Вибрані твори</title>
+   <title>Noble Art</title>
    <link rel="stylesheet" href="../css/main.css">
    <script src="../scripts/index.js" defer></script>
 </head>
@@ -43,7 +43,10 @@
          <p>INFO</p>
       </div>
       <p id="description-text">
-         <font size="3"><b>Погляд крізь епохи:</b> Ласкаво просимо до нашої зали...</font>
+         <font size="3"><b>Погляд крізь епохи:</b> Цього місяця ми представляємо унікальну серію полотен, що поєднують у
+            собі
+            класичну техніку олійного живопису та сміливі експерименти сучасного авангарду. Кожна робота в цій колекції
+            була відібрана нашими кураторами, щоб надихнути вас на власні роздуми про вічне.</font>
       </p>
    </div>
 
