--- a/lab 5/html/main.html
+++ b/lab 5/html/main.html
@@ -7,7 +7,7 @@
    <meta name="description" content="Noble Art — Галерея сучасного мистецтва">
    <meta name="author" content="Arseny">
 
-   <title>Noble Art | Вибрані твори</title>
+   <title>Noble Art</title>
    <link rel="stylesheet" href="/lab 5/css/main.css">
 </head>
 
