--- a/lab 2/html/schedule.html
+++ b/lab 2/html/schedule.html
@@ -13,13 +13,13 @@
 
 <header>
    <div class="logo-section">
-      <a href="/html/main.html" class="logo-icon">N</a>
+      <a href="main.html" class="logo-icon">N</a>
       <font face="Georgia" size="4"><b>Noble Art</b></font>
    </div>
 
    <nav class="main-nav">
-      <a href="/html/main.html">Головна</a>
-      <a href="/html/location.html">Розташування</a>
+      <a href="main.html">Головна</a>
+      <a href="/lab 2/html/location.html">Розташування</a>
    </nav>
 
    <div class="user-controls">
@@ -36,12 +36,6 @@
       <h1>Графік роботи та відвідування</h1>
 
       <table class="complex-schedule" cellpadding="15" cellspacing="0">
-         <colgroup>
-            <col span="1" style="background-color: #fafafa; width: 30%;">
-            <col span="1" style="width: 40%;">
-            <col span="1" style="width: 30%;">
-         </colgroup>
-
          <thead>
             <tr>
                <th>Тип дня</th>
