--- a/lab 2/html/location.html
+++ b/lab 2/html/location.html
@@ -12,7 +12,7 @@
 <body>
 
    <div class="back-nav">
-      <a href="/html/main.html" class="back-btn">
+      <a href="/lab 2/html/main.html" class="back-btn">
          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
             <path d="M19 12H5M12 19l-7-7 7-7" />
          </svg>
@@ -23,7 +23,7 @@
    <div class="map-container">
       <iframe
          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.664430209124!2d30.51944431573173!3d50.44736897947479!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce5066917f3d%3A0x63776e10f19c9615!2sNational%20Art%20Museum%20of%20Ukraine!5e0!3m2!1sen!2sua!4v1690000000000!5m2!1sen!2sua"
-         allowfullscreen="" title="Карта: Національний художній музей України" loading="lazy">
+         allowfullscreen=" " title="Карта: Національний художній музей України" loading="lazy">
       </iframe>
    </div>
 
