add colgroup in schedule.html

--- a/lab 2/html/schedule.html
+++ b/lab 2/html/schedule.html
@@ -36,6 +36,12 @@
       <h1>Графік роботи та відвідування</h1>
 
       <table class="complex-schedule" cellpadding="15" cellspacing="0">
+         <colgroup>
+            <col span="1" style="background-color: #fafafa; width: 30%;">
+            <col span="1" style="width: 40%;">
+            <col span="1" style="width: 30%;">
+         </colgroup>
+
          <thead>
             <tr>
                <th>Тип дня</th>
