--- a/lab 1/main.html
+++ b/lab 1/main.html
@@ -12,7 +12,7 @@
 
 <header link="blue" vlink="purple" alink="red">
    <div class="logo-section">
-      <a href="/lab 2/html/home.html" class="logo-icon"
+      <a href="home.html" class="logo-icon"
          style="text-decoration: none; background: #000; color: #fff; padding: 5px 10px; border-radius: 5px;">N</a>
       <font face="Georgia" size="4"><b> Noble Art Gallery</b></font>
    </div>
