--- a/lab 1/schedule.html
+++ b/lab 1/schedule.html
@@ -8,18 +8,17 @@
    <meta name="author" content="Arseny">
 
    <title>Noble Art</title>
-   <link rel="stylesheet" href="/css/schedule.css">
 </head>
 
 <header>
    <div class="logo-section">
-      <a href="/html/main.html" class="logo-icon">N</a>
+      <a href="main.html" class="logo-icon">N</a>
       <font face="Georgia" size="4"><b>Noble Art</b></font>
    </div>
 
    <nav class="main-nav">
-      <a href="/html/main.html">Головна</a>
-      <a href="/html/location.html">Розташування</a>
+      <a href="main.html">Головна</a>
+      <a href="location.html">Розташування</a>
    </nav>
 
    <div class="user-controls">
