--- a/lab 1/index.html
+++ b/lab 1/index.html
@@ -13,7 +13,7 @@
 <body>
    <div class=" hero ">
       <h1>Noble Art</h1>
-      <a href="/html/main.html" class="get-started">Відкрити галерею</a>
+      <a href="main.html" class="get-started">Відкрити галерею</a>
    </div>
 </body>
 
