--- a/main.html
+++ b/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 
 <head>
    <meta charset="UTF-8">
@@ -121,6 +121,121 @@
       </a>
 
    </div>
+
+   <hr>
+
+   <div style="margin: 20px 0;">
+      <p align="left">
+         <font face="Georgia" size="4" color="#ffffff"><b>Гід по галереї (Напрямки)</b></font>
+      </p>
+
+      <p>
+         <font face="Arial" size="3" color="#ffffff"><b>1) Жанри мистецтва в нашому фонді</b></font>
+      </p>
+
+      <ul type="square">
+         <li>
+            <font face="Tahoma" size="3" color="#f1f1f1">Пейзаж (природа та міські краєвиди)</font>
+         </li>
+         <li>
+            <font face="Tahoma" size="3" color="#f1f1f1"><i>Натюрморт</i> (гармонія предметів)</font>
+         </li>
+         <li>
+            <font face="Tahoma" size="3" color="#f1f1f1"><b>Сюрреалізм</b> (світ фантазій та снів)</font>
+         </li>
+      </ul>
+
+      <p>
+         <font face="Arial" size="3" color="#ffffff"><b>2) Етапи придбання картини</b></font>
+      </p>
+
+      <ol type="1">
+         <li>
+            <font face="Verdana" size="3" color="#f1f1f1">Вибір роботи в каталозі</font>
+         </li>
+         <li>
+            <font face="Verdana" size="3" color="#f1f1f1">Отримання сертифіката автентичності</font>
+         </li>
+         <li>
+            <font face="Verdana" size="3" color="#f1f1f1">Бережна доставка до вашої оселі</font>
+         </li>
+      </ol>
+
+      <p>
+         <font face="Arial" size="3" color="#ffffff"><b>3) Термінологія для відвідувачів</b></font>
+      </p>
+
+      <dl>
+         <dt>
+            <font face="Georgia" size="3" color="#ffd27d"><b>Експонат</b></font>
+         </dt>
+         <dd>
+            <font face="Tahoma" size="3" color="#f1f1f1">Окремий твір мистецтва (картина, скульптура, інсталяція), що
+               виставлений для огляду.</font>
+         </dd>
+
+         <dt>
+            <font face="Georgia" size="3" color="#ffd27d"><b>Вернісаж</b></font>
+         </dt>
+         <dd>
+            <font face="Tahoma" size="3" color="#f1f1f1">Урочисте відкриття художньої виставки, на якому присутні автори
+               та запрошені гості.</font>
+         </dd>
+
+         <dt>
+            <font face="Georgia" size="3" color="#ffd27d"><b>Багет</b></font>
+         </dt>
+         <dd>
+            <font face="Tahoma" size="3" color="#f1f1f1">Декоративна планка або рама, яка обрамляє картину, підкреслюючи
+               її стиль.</font>
+         </dd>
+      </dl>
+   </div>
+
+
+   <h2 id="selected_exhibits" style="text-align:center; margin-top:40px;">
+      Головні лоти сезону
+   </h2>
+
+   <table border="1" cellspacing="0" cellpadding="10" align="center" width="90%">
+      <thead style="background-color:#3b3b3b; color:white;">
+         <tr>
+            <th>"Золота осінь"</th>
+            <th>"Ранкова роса"</th>
+            <th>"Мегаполіс"</th>
+            <th>"Мрії про море"</th>
+         </tr>
+      </thead>
+
+      <tbody>
+
+         <tr align="center">
+            <td><img src="https://images.unsplash.com/photo-1579783902614-a3fb3927b6a5?q=80&w=200" width="150"
+                  alt="Лот 1"></td>
+            <td><img src="https://images.unsplash.com/photo-1582555172866-f73bb12a2ab3?q=80&w=200" width="150"
+                  alt="Лот 2"></td>
+            <td><img src="https://images.unsplash.com/photo-1549490349-8643362247b5?q=80&w=200" width="150" alt="Лот 3">
+            </td>
+            <td><img src="https://images.unsplash.com/photo-1606819717115-9159c900370b?q=80&w=200" width="150"
+                  alt="Лот 4"></td>
+         </tr>
+
+
+         <tr align="center">
+            <td><a href="#picture1" style="color: #ffd27d;">Детальніше</a></td>
+            <td><a href="#picture2" style="color: #ffd27d;">Детальніше</a></td>
+            <td><a href="#picture3" style="color: #ffd27d;">Детальніше</a></td>
+            <td><a href="#" style="color: #ffd27d;">Детальніше</a></td>
+         </tr>
+
+         <tr align="center">
+            <td>Олія на полотні</td>
+            <td>Акварельна техніка</td>
+            <td>Цифровий арт</td>
+            <td>Акриловий живопис</td>
+         </tr>
+      </tbody>
+   </table>
 
    <footer style="text-align: center; padding: 30px; margin-top: 50px; border-top: 1px solid #555;">
       &copy; 2026 Noble Art Gallery — Ми робимо мистецтво ближчим.
