modify files lab 3

--- a/html/main.html
+++ b/html/main.html
@@ -8,7 +8,7 @@
    <meta name="author" content="Arseny">
 
    <title>Noble Art</title>
-   <link rel="stylesheet" href="css/main.css">
+   <link rel="stylesheet" href="/css/main.css">
 
    <style>
       a {
@@ -22,13 +22,13 @@
 
    <header>
       <div class="logo-section">
-         <a href="html/home.html" class="logo-icon">N</a>
+         <a href="/html/home.html" class="logo-icon">N</a>
          <font face="Georgia" size="4"><b>Noble Art</b></font>
       </div>
 
       <nav class="main-nav">
-         <a href="html/schedule.html">Графік роботи</a>
-         <a href="html/location.html">Розташування</a>
+         <a href="/html/schedule.html">Графік роботи</a>
+         <a href="/html/location.html">Розташування</a>
       </nav>
 
       <div class="user-controls">
