lab 5 has finished

--- a/html/home.html
+++ b/html/home.html
@@ -14,7 +14,7 @@
 <body>
    <div class="hero">
       <h1>Noble Art</h1>
-      <a href="/html/main.html" class="get-started">Відкрити галерею</a>
+      <a href="html/main.html" class="get-started">Відкрити галерею</a>
    </div>
 </body>
 
